// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteConfirmation component should match snapshot 1`] = `
<body>
  <div>
    <div
      class="fixed inset-0 flex items-center z-40 max-h-screen overflow-y-scroll"
    >
      <div
        class="fixed inset-0 bg-gray-900 opacity-75"
      />
       
      <div
        class="relative mx-4 md:mx-auto w-full md:w-2/3 lg:w-3/5 xl:w-1/3 z-50 max-h-full"
      >
        <div
          class="py-8"
        >
          <div
            class="relative shadow-xl bg-white dark:bg-gray-800 rounded-lg p-4 xl:p-6 max-h-full"
          >
            <div
              class="absolute top-4 right-4"
            >
              <button
                aria-label="close"
                class="text-gray-800 dark:text-gray-400 hover:bg-red-500 hover:text-white p-1 rounded-full"
              >
                <span
                  class="sr-only"
                >
                  Dismiss
                </span>
                 
                <svg
                  aria-hidden="true"
                  class="inline w-7 h-7"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 18L18 6M6 6l12 12"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
             
            <div
              class="mt-2"
            >
              <div
                class="mt-8 mb-4"
              >
                <p
                  class="font-bold text-xl text-red-600"
                >
                  
                   
                  <br />
                   
                  This cannot be undone.
                </p>
              </div>
               
              <div
                class="text-right"
              >
                <button
                  class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mr-4"
                  data-testid="confirm-cancel"
                  type="button"
                >
                  Cancel
                </button>
                 
                <button
                  class="btn btn-red svelte-15ascl9"
                  data-testid="confirm-confirm"
                  type="button"
                >
                  Confirm Delete
                </button>
                
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DeleteConfirmation component should match snapshot when permanent=false 1`] = `
<body>
  <div>
    <div
      class="fixed inset-0 flex items-center z-40 max-h-screen overflow-y-scroll"
    >
      <div
        class="fixed inset-0 bg-gray-900 opacity-75"
      />
       
      <div
        class="relative mx-4 md:mx-auto w-full md:w-2/3 lg:w-3/5 xl:w-1/3 z-50 max-h-full"
      >
        <div
          class="py-8"
        >
          <div
            class="relative shadow-xl bg-white dark:bg-gray-800 rounded-lg p-4 xl:p-6 max-h-full"
          >
            <div
              class="absolute top-4 right-4"
            >
              <button
                aria-label="close"
                class="text-gray-800 dark:text-gray-400 hover:bg-red-500 hover:text-white p-1 rounded-full"
              >
                <span
                  class="sr-only"
                >
                  Dismiss
                </span>
                 
                <svg
                  aria-hidden="true"
                  class="inline w-7 h-7"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 18L18 6M6 6l12 12"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
             
            <div
              class="mt-2"
            >
              <div
                class="mt-8 mb-4"
              >
                <p
                  class="font-bold text-xl text-red-600"
                >
                  
                   
                </p>
              </div>
               
              <div
                class="text-right"
              >
                <button
                  class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 mr-4"
                  data-testid="confirm-cancel"
                  type="button"
                >
                  Cancel
                </button>
                 
                <button
                  class="btn btn-red svelte-15ascl9"
                  data-testid="confirm-confirm"
                  type="button"
                >
                  Confirm Delete
                </button>
                
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
